plugins {
    id 'java'
    id 'jacoco'
}

group 'CPEN 221'
version '0.1-SKELETON'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
    jcenter()

}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.fastily:jwiki:1.8.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

}
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}
check {
    dependsOn jacocoTestCoverageVerification
}

//run {
//    enableAssertions = true
//}
jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'CLASS'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.9
            }
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.85
            }
        }
    }
}
